--- a/presentation/package.json
+++ b/presentation/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "bulma": "^0.7.4",
+    "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
