--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
+    "bulma": "^0.7.4",
     "express": "^4.16.4",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1"
