--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "core-js": "^2.6.5",
+    "vee-validate": "^2.2.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
