--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-  },
+  "engines": {},
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,7 @@
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1"
   },
