--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "core-js": "^2.6.5",
     "vee-validate": "^2.2.5",
