--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
