--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "vee-validate": "^2.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
