--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "core-js": "^2.6.5",
+    "moment": "^2.24.0",
     "vee-validate": "^2.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
