--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.7.4",
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "vee-validate": "^2.2.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
